--- a/app/views/devlogs/_form.html.erb
+++ b/app/views/devlogs/_form.html.erb
@@ -34,6 +34,6 @@
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class: "btn-retro", style: "font-family: 'Pixelify Sans', sans-serif;" %>
   </div>
 <% end %>
