--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
+<!-- Mobile styles moved to `app/assets/stylesheets/application.css` -->
+
+
 <p style="color: green"><%= notice %></p>
 
 <div class="retro-container">
@@ -7,13 +10,13 @@
     <div class="hero-left">
       <div class="project-media">
         <% if @project.respond_to?(:image_url) && @project.image_url.present? %>
-          <img src="<%= @project.image_url %>" alt="<%= @project.name %>">
+          <img class="project-media__img" src="<%= @project.image_url %>" alt="<%= @project.name %>">
         <% elsif @project.respond_to?(:image) && @project.image.respond_to?(:attached?) && @project.image.attached? %>
-          <%= image_tag(@project.image, alt: @project.name, style: "width:500px; height:300px; border-radius:5%") %>
+          <%= image_tag(@project.image, alt: @project.name, class: "project-media__img") %>
         <% else %>
-          <img style="width:500px; height:300px; border-radius:5%" src="https://placehold.co/500x300" alt="<%= @project.name %>">
+          <img class="project-media__img" src="https://placehold.co/800x450" alt="<%= @project.name %>">
         <% end %>
-      </div>
+      </div>    
 
       <div style="margin-top:12px">
         <h1 class="project-title"><%= @project.name %></h1>
@@ -41,16 +44,16 @@
     </div>
 
     <aside class="hero-right">
-      <div class="featured-project">
+      <div class="featured-project" style="box-shadow: 0px 0px 0 rgb(0,0,0,0);">
 
-        <div style="margin-top:10px; top:10px; position:relative; box-shadow: 0px 0px 0 rgb(0,0,0,0);">
+        <div style="margin-top:10px; top:10px; position:relative;">
           <p><strong>Owner:</strong> <%= link_to @project.user.display_name, user_profile_path(@project.user) %></p>
           <p><strong>Total time:</strong> <%= format_duration(@project.total_seconds) %></p>
           <p><strong>Devlogged:</strong> <%= format_duration(@project.total_devlogged_seconds) %></p>
           <p><strong>Undocumented:</strong> <%= format_duration([@project.total_seconds.to_i - @project.total_devlogged_seconds, 0].max) %></p>
         </div>
 
-        <div style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap">
+        <div class="featured-actions" style="margin-top:12px; display:flex; gap:8px; flex-wrap:wrap">
           <% if @project.user == current_user %>
 
             <% if @project.computed_shipped? %>
