--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -153,7 +153,7 @@
 
     <div class="features" role="region" aria-label="Key features">
       <div class="feature">
-        <h3>Build Metroidvania Games</h3>
+        <h3>Build Games</h3>
         <p>Create game projects, track and link Hackatime projects.</p>
       </div>
       <div class="feature">
