--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,7 @@
 
 <% if admin? %>
   <%= link_to "New product (Admin)", new_product_path, class: 'btn-retro btn-retro--small' %>
+  <p style="margin-bottom: 10px;"></p>
 <% end %>
 
 <div id="products" class="products-grid">
