Add demo paragraph to footer in application layout
Added a demo paragraph to the footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -206,6 +206,7 @@
       <div class="retro-container">
         <strong>Metroid Mania</strong>
         <p>Made for Hackclub</p>
+        <p>Demo</p>
       </div>
     </footer>
 
